Fix search input overlap in Firefox

--- a/_sass/partials/_navigation.sass
+++ b/_sass/partials/_navigation.sass
@@ -7,3 +7,7 @@
     +inline-block-list-container
     > li
       +inline-block-list-item
+
+#search
+  input
+    width: 96px
