--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -147,3 +147,5 @@ div.post-content-wide > pre > code, div.post-content-wide > div.highlight > code
 #links-menu ul { margin: 0; padding: 0; border: 0; overflow: hidden; *zoom: 1; }
 #links-menu ul > li { list-style-image: none; list-style-type: none; margin-left: 0; display: -moz-inline-box; -moz-box-orient: vertical; display: inline-block; vertical-align: middle; *vertical-align: auto; white-space: nowrap; }
 #links-menu ul > li { *display: inline; }
+
+#search input { width: 96px; }
